<resources>
    <string name="app_name">Figs</string>
    <string-array name="countries_array">
        <item>Your Residence</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Faeroe Islands</item>
        <item>Falkland Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>Former Yugoslav Republic of Macedonia</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Marianas</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Sqo Tome and Principe</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>The Bahamas</item>
        <item>The Gambia</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="title_activity_learn">Learn</string>
    <string name="title_learn_child">Global Semiconductor Manufacturing and Distri&#8230;</string>
    <string name="messenger_cd_profile_pic_description">Profile picture</string>
    <string name="messenger_cd_right_arrow_description">Right Arrow</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_videoView">VideoView</string>
    <string name="title_activity_pdfView">PDFView</string>
    <string name="filter">Filter</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_country">Country</string>
    <string name="search_hint_country">type Country to search</string>
    <string name="action_search">Search</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_calculator">FIGS Probability Calculator</string>
    <string name="title_activity_results_calculator">Results Calculator</string>
    <string name="result_calculator" formatted="false">FIGS has calculated that there is a %s chance that your %s returns could be achieved in an investment period of %d month(s)</string>
    <string name="button_reset">Reset</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_settings_item">Support Center</string>
    <string name="subtitle_settings_item">We\'re here to help you</string>
    <string name="logout">Logout</string>
    <string name="entities_Name">Name</string>
    <string name="entities_FirstName">First Name</string>
    <string name="entities_LastName">Last Name</string>
    <string name="entities_Details">Details</string>
    <string name="entities_Email_Address">Email Address</string>
    <string name="entities_dummy_email">ben.val@gmail.com</string>
    <string name="entities_Gender">Gender</string>
    <string name="entities_Country">Country</string>
    <string name="entities_City">City</string>
    <string name="entities_Mobile_Number">Mobile Number</string>
    <string name="entities_Enter_your_birthday">Enter your birthday</string>
    <string name="month_3m">3M</string>
    <string name="month_6m">6M</string>
    <string name="month_9m">9M</string>
    <string name="profile_Name">ProfileName</string>
    <string name="profile_Country">City, Country</string>
    <string name="FIGS_Analytics_Score">FIGS Analyst Score</string>
    <string name="AverageReturns">Average Returns</string>
    <string name="AverageTimeforReturn">Average Time for Return</string>
    <string name="action_report">Report</string>
    <string name="action_Infographic">Infographic</string>
    <string name="action_Video">Video</string>
    <string name="action_News">News</string>
    <string name="title_Company_Name">Company Name</string>
    <string name="title_Overall">Overall</string>
    <string name="title_3Years">3Y</string>
    <string name="title_5Years">5Y</string>
    <string name="title_Forgot_Password">Reset Password</string>
    <string name="title_Password">Password</string>
    <string name="title_Email_Address">Email Address</string>
    <string name="title_Log_In">Log In</string>
    <string name="text_subscription_basic">Basic</string>
    <string name="text_subscription_visit">Visit figsinc.com to subscribe</string>
    <string name="text_subscription_Free_Forever">Free Forever</string>
    <string name="text_subscription_one_access_to_theme">1 access to Theme/Sector/mo</string>
    <string name="text_subscription_one_access_to_calculator">1 access to FIGS Calculator/mo</string>
    <string name="text_subscription_professionals_update">Get update from Professionals</string>
    <string name="text_subscription_stock_price">Latest stock price on the market</string>
    <string name="text_subscription_bearist_market">Know world\'s Bullist  &amp; Bearist Market</string>
    <string name="signup_click_agree">Click “Agree &amp; Continue” to accept</string>
    <string name="signup_terms_of_service">Terms of Service </string>
    <string name="signup_and">and</string>
    <string name="signup_Privacy_Policy">Privacy Policy</string>
</resources>