<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.figsinc.app.onboarding.OnboardingActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/bold"
                android:text="@string/text_subscription_basic"
                android:textColor="@color/greyBlue"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/bold"
                android:paddingRight="7dp"
                android:text="@string/text_subscription_Free_Forever"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <View
                android:layout_width="255dp"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/whiteTwo"></View>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/regular"
                android:layout_gravity="center|left"
                android:text="@string/text_subscription_one_access_to_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                 />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|left"
                android:fontFamily="@font/regular"
                android:text="@string/text_subscription_one_access_to_calculator"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                 />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/regular"
                android:layout_gravity="center|left"
                android:text="@string/text_subscription_professionals_update"
                android:textColor="@color/whiteTwo"
                android:textSize="@dimen/text_size_14"
                 />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|left"
                android:fontFamily="@font/regular"
                android:text="@string/text_subscription_stock_price"
                android:textColor="@color/whiteTwo"
                android:textSize="@dimen/text_size_14"
                />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/regular"
                android:layout_gravity="center|left"
                android:text="@string/text_subscription_bearist_market"
                android:textColor="@color/whiteTwo"
                android:textSize="@dimen/text_size_14"
                 />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/text_subscription_visit"
                android:textColor="@color/whiteTwo"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/text_subscription_visit"
                android:textColor="@color/whiteTwo"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
