<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/darkish_blue"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/linear_bottomLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/signup_click_agree"
            android:textColor="@color/greyBlue"
            android:textSize="@dimen/text_size_14"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:paddingRight="7dp"
                android:id="@+id/textView_terms_of_service"
                android:text="@string/signup_terms_of_service"
                android:textColor="@color/darkish_blue"
                android:textSize="@dimen/text_size_14"
                android:textStyle="normal" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingRight="7dp"
                android:text="@string/signup_and"
                android:textColor="@color/greyBlue"
                android:textSize="@dimen/text_size_14"
                android:textStyle="normal" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:text="@string/signup_Privacy_Policy"
                android:textColor="@color/darkish_blue"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>